# CI-CT

stm32-cmake-blinking-led/: run_cmake.sh
testfiles/: CMakeLists.txt
