project(HelloWorld)
cmake_minimum_required(VERSION 3.0)
add_definitions(-DTESTING)
#add_executable(init_led /var/lib/jenkins/workspace/CI-CT/stm32-cmake-blinking-led/source/main/src/init_led.c)
add_library(init_led /var/lib/jenkins/workspace/CI-CT/stm32-cmake-blinking-led/source/main/src/init_led.c)
